Fix overflow issue in the header, and Update README file

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 header{
     position: relative;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 #header-image2{
